--- a/Views/Market/Index.cshtml
+++ b/Views/Market/Index.cshtml
@@ -86,7 +86,7 @@
                 <li><i class="fa fa-star"></i></li>
             </ul>
 
-            <button class="buy-1" onclick="location.href='../Trade'">Buy Now</button>
+            <button class="buy-1" onclick="location.href='../Trade?Id=@item.UserID'">Buy Now</button>
         </div>
 
     }
