--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -61,6 +61,12 @@
                         </a>
                     </li>
                     <li>
+                        <a href="@Url.Action("TradeRequests", "Trade")">
+                            <span class="icon"><ion-icon name="card-outline"></ion-icon></span>
+                            <span class="title">Trade requests</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="@Url.Action("Settings", "Home")">
                             <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
                             <span class="title">Setting</span>
