--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -2,6 +2,12 @@
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <div class="container">
+    @if (@ViewData["Exist"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            <h3>Bad username or password</h3>
+        </div>
+    }
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div class="card-header">
@@ -56,7 +62,6 @@
     @@import url('https://fonts.googleapis.com/css?family=Numans');
 
     html, body {
-        background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         height: 100%;
@@ -73,13 +78,13 @@
         margin-top: auto;
         margin-bottom: auto;
         width: 400px;
-        background-color: rgba(0,0,0,0.5) !important;
+        background-color: rgba(0,0,100,0.7) !important;
     }
 
     .social_icon span {
         font-size: 60px;
         margin-left: 10px;
-        color: #FFC312;
+        color: aliceblue;
     }
 
         .social_icon span:hover {
@@ -99,7 +104,7 @@
 
     .input-group-prepend span {
         width: 50px;
-        background-color: #FFC312;
+        background-color: dodgerblue;
         color: black;
         border: 0 !important;
     }
@@ -122,7 +127,7 @@
 
     .login_btn {
         color: black;
-        background-color: #FFC312;
+        background-color: dodgerblue;
         width: 140px;
     }
 
