--- a/Views/Market/Add.cshtml
+++ b/Views/Market/Add.cshtml
@@ -35,6 +35,11 @@
             <br>
         </div>
         <div class="mb-3">
+            <label>Estimated price</label>
+            <input class="form-control" type="text" name="Price" placeholder="Price" required autofocus />
+            <br>
+        </div>
+        <div class="mb-3">
             <label>Upload your photo</label>
             <label for="Image">Image</label>
 
@@ -46,43 +51,3 @@
 
     }
 </div>
- <!-- New Customers -->
-                <div class="recentCustomers">
-                    <div class="cardHeader">
-                        <h2>Recent Customers</h2>
-                    </div>
-                    <table>
-                        <tr>
-                            <td width="60px"><div class="imgBx"><img src="img1.jpg"></div></td>
-                            <td><h4>David<br><span>Italy</span></h4></td>
-                        </tr>
-                        <tr>
-                            <td><div class="imgBx"><img src="img2.jpg"></div></td>
-                            <td><h4>Muhammad<br><span>India</span></h4></td>
-                        </tr>
-                        <tr>
-                            <td><div class="imgBx"><img src="img3.jpg"></div></td>
-                            <td><h4>Amelia<br><span>France</span></h4></td>
-                        </tr>
-                        <tr>
-                            <td><div class="imgBx"><img src="img4.jpg"></div></td>
-                            <td><h4>Olivia<br><span>USA</span></h4></td>
-                        </tr>
-                        <tr>
-                            <td><div class="imgBx"><img src="img5.jpg"></div></td>
-                            <td><h4>Amit<br><span>Japan</span></h4></td>
-                        </tr>
-                        <tr>
-                            <td><div class="imgBx"><img src="img6.jpg"></div></td>
-                            <td><h4>Ashraf<br><span>India</span></h4></td>
-                        </tr>
-                        <tr>
-                            <td><div class="imgBx"><img src="img7.jpg"></div></td>
-                            <td><h4>Diana<br><span>Malaysia</span></h4></td>
-                        </tr>
-                        <tr>
-                            <td><div class="imgBx"><img src="img8.jpg"></div></td>
-                            <td><h4>Amit<br><span>India</span></h4></td>
-                        </tr>
-                    </table>
-                </div>
