--- a/Views/Market/Product.cshtml
+++ b/Views/Market/Product.cshtml
@@ -7,54 +7,53 @@
 <div class="container">
     <div class="card">
         <div class="card-body">
-            <h3 class="card-title">Rounded Chair</h3>
-            <h6 class="card-subtitle">globe type chair for rest</h6>
             <div class="row">
                 <div class="col-lg-5 col-md-5 col-sm-6" style="min-width:380px">
                     <div class="white-box text-center"><img src="@ViewBag.ImgSrc" class="img-responsive" style="max-width: 380px; max-height: 600px"></div>
                 </div>
                 <div class="col-lg-7 col-md-7 col-sm-6">
-                    <h4 class="box-title mt-5">Product description</h4>
-                    <p>Lorem Ipsum available,but the majority have suffered alteration in some form,by injected humour,or randomised words which don't look even slightly believable.but the majority have suffered alteration in some form,by injected humour</p>
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <h3 class="box-title mt-5">General Info</h3>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-product">
+                                <tbody>
+                                    <tr>
+                                        <td width="390">Brand</td>
+                                        <td>@Model.Brand.Name</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Coffein</td>
+                                        <td>@Model.Coffein</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Sugar</td>
+                                        <td>@Model.Sugar</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Size</td>
+                                        <td>@Model.Size</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                     <h2 class="mt-5">
-                        $153<small class="text-success">(36%off)</small>
+                        @if (@Model.Price == 0)
+                        {
+                            <h2>Not estimated<small class="text-success"> (Free traid fee)</small></h2>
+                        }
+                        else
+                        {
+                            <h2>$@Model.Price<small class="text-success"> (Free traid fee)</small></h2>
+                        }
+
                     </h2>
-                    <button class="btn btn-dark btn-rounded mr-1" data-toggle="tooltip" title="" data-original-title="Add to cart">
-                        <i class="fa fa-shopping-cart"></i>
-                    </button>
+                    <button class="buy-1" onclick="location.href='../../Trade?Id=@ViewBag.User'">Buy Now</button>
                     <button class="btn btn-primary btn-rounded">Buy Now</button>
                     <h3 class="box-title mt-5">Total watched: @Model.Seen</h3>
-                    <ul class="list-unstyled">
-                        <li><i class="fa fa-check text-success"></i>Sturdy structure</li>
-                        <li><i class="fa fa-check text-success"></i>Designed to foster easy portability</li>
-                        <li><i class="fa fa-check text-success"></i>Perfect furniture to flaunt your wonderful collectibles</li>
-                    </ul>
+
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <h3 class="box-title mt-5">General Info</h3>
-                    <div class="table-responsive">
-                        <table class="table table-striped table-product">
-                            <tbody>
-                                <tr>
-                                    <td width="390">Brand</td>
-                                    <td>@Model.Brand.Name</td>
-                                </tr>
-                                <tr>
-                                    <td>Coffein</td>
-                                    <td>@Model.Coffein</td>
-                                </tr>
-                                <tr>
-                                    <td>Sugar</td>
-                                    <td>@Model.Sugar</td>
-                                </tr>
-                                <tr>
-                                    <td>Size</td>
-                                    <td>@Model.Size</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
