--- a/Views/Market/Index.cshtml
+++ b/Views/Market/Index.cshtml
@@ -71,23 +71,89 @@
     {
 
 
-        <div class="contentk">
-            <img src="@item.Image">
-            <h3>@item.Name</h3>
-            <p>@item.Brand.Name</p>
-            <center><div><a class="link-primary" href="@Url.Content("~/Market/UserProfile/?id=" + item.UserID)">User profile</a></div></center>
-            <center><div><a class="link-primary" href="@Url.Content("~/Market/Product/?id=" + item.ProductID)">Item details</a></div></center>
+    <div class="contentk">
+        <img src="@item.Image">
+        <h3>@item.Name</h3>
+        <p>@item.Brand.Name</p>
+        <center><div><a class="link-primary" href="@Url.Content("~/Market/UserProfile/?id=" + item.UserID)">User profile</a></div></center>
+        <center><div><a class="link-primary" href="@Url.Content("~/Market/Product/?id=" + item.ProductID)">Item details</a></div></center>
+        @{
+            switch (item.Rating)
+            {
+                case 0:
+                    // Use the text block below to separate html elements from code
+                    <ul class="ulk">
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star "></i></li>
+                        <li><i class="fa fa-star "></i></li>
+                        <li><i class="fa fa-star "></i></li>
+                        <li><i class="fa fa-star"></i></li>
+                    </ul>
+                    break;  // Always break each case
+                case 1:
+                    <ul class="ulk">
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star"></i></li>
+                    </ul>
+                    break;
+                case 2:
+                    // Use the text block below to separate html elements from code
+                    <ul class="ulk">
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star"></i></li>
+                    </ul>
+                    break;  // Always break each case
+                case 3:
+                    <ul class="ulk">
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star"></i></li>
+                    </ul>
+                    break;
+                case 4:
+                    // Use the text block below to separate html elements from code
+                    <ul class="ulk">
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star"></i></li>
+                    </ul>
+                    break;  // Always break each case
+                case 5:
+                    <ul class="ulk">
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star checked"></i></li>
+                        <li><i class="fa fa-star"></i></li>
+                    </ul>
+                    break;
+                default:
+                    <text>
+                        <h1>WTF Site</h1>
+                    </text>
+                    break;
+            }
+        }
+        <ul class="ulk">
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star"></i></li>
+        </ul>
 
-            <ul class="ulk">
-                <li><i class="fa fa-star checked"></i></li>
-                <li><i class="fa fa-star checked"></i></li>
-                <li><i class="fa fa-star checked"></i></li>
-                <li><i class="fa fa-star checked"></i></li>
-                <li><i class="fa fa-star"></i></li>
-            </ul>
-
-            <button class="buy-1" onclick="location.href='../Trade?Id=@item.UserID'">Buy Now</button>
-        </div>
+        <button class="buy-1" onclick="location.href='../Trade?Id=@item.UserID'">Buy Now</button>
+    </div>
 
     }
 </div>
