--- a/Views/Market/Product.cshtml
+++ b/Views/Market/Product.cshtml
@@ -48,8 +48,7 @@
                         }
 
                     </h2>
-                    <button class="buy-1" onclick="location.href='../../Trade?Id=@ViewBag.User'">Buy Now</button>
-                    <button class="btn btn-primary btn-rounded">Buy Now</button>
+                    <button class="btn btn-primary btn-rounded "onclick="location.href='../../Trade?Id=@ViewBag.User'">Trade it now</button>
                     <h3 class="box-title mt-5">Total watched: @Model.Seen</h3>
 
                 </div>
